# ZK-DeFI-Indexer

./: README.md
defi-explorer-fe/: README.md  index.html  package-lock.json  package.json
defi-explorer-fe/src/: App.tsx  index.css
defi-explorer-fe/src/components/: CopyButton.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx  StatCard.tsx  TechnicalText.tsx
defi-explorer-fe/src/pages/: BatchDetail.tsx  Batches.tsx  Docs.tsx  Home.tsx  Metrics.tsx  PoolDetail.tsx  Pools.tsx  TransactionDetail.tsx  Transactions.tsx
indexer-rs/: .env.example  Cargo.toml  raw_blob_1.txt
indexer-rs/src/: arbitrum.rs  main.rs
indexer-rs/src/utils/: constants.rs  helpers.rs
